# C-ICAP-Classify

./: AUTHORS  Makefile.am  README  common.h  configure.ac  configure.in
contrib/: c_icap_classify.spec
contrib/ImageClassificationData-PD/: COPYING  c-icap.conf.example
contrib/ImageClassificationData-PD/version1/: Female.Breast.Nude_cascade.xml  Female.Genitals.Nude_haar_cascade.xml  Human.Buttocks.Nude_haar_cascade.xml  Kiss-Lick-Suck_haar_cascade.xml  Male.Genitals.Nude_haar_cascade.xml
contrib/ImageClassificationData-PD/version2/: Female.Breast.Nude_cascade.xml  Female.Genitals.Nude_haar_cascade.xml  Human.Buttocks.Nude_haar_cascade.xml  Kiss-Lick-Suck_haar_cascade.xml  Male.Genitals.Nude_haar_cascade.xml
contrib/ImageClassificationData-PD/version3/: Female.Breast.Nude_cascade.xml  Female.Genitals.Nude_cascade.xml  Human.Buttocks.Nude_cascade.xml
contrib/text-training/: C-ICAP Classify - Training Guide.odt  README.md  anysite-singlelanguage.py  fnb_wrap_findtolearn.sh  fnb_wrap_judge.sh  fnb_zeroset.sh  make_fhs_progs.sh  mass_build_fhs.sh  mass_build_fnb.sh  report.py  restage_fhs.sh  restage_fnb.sh  single_build_fhs.sh  single_build_fnb.sh  smart_mass_build_fhs.sh  smart_mass_build_fnb.sh  stage_possible.sh  training_config.sh  url2utf8.py
docs/: HOW TO USE  WHY
docs/man/: Makefile.am  fhs_findtolearn.8.in  fhs_judge.8.in  fhs_learn.8.in  fhs_makepreload.8.in  fnb_findtolearn.8.in  fnb_judge.8.in  fnb_learn.8.in  fnb_makepreload.8.in
services/: Makefile.am
services/classify/: HEADERS-FOR-ACL-USE.txt  Makefile.am  Postgresql.sql  bayes.c  bayes.h  c-icap-classify.conf.example  currency.h  fhs_findtolearn.c  fhs_judge.c  fhs_learn.c  fhs_makepreload.c  findtolearn_util.c  fnb_findtolearn.c  fnb_judge.c  fnb_learn.c  fnb_makepreload.c  hash.c  hash.h  html.c  html.h  htmlentities.h  hyperspace.c  hyperspace.h  quadsort.c  srv_classify.c  srv_classify.h  srv_classify_image.c  srv_classify_image.h  train_common.c  train_common.h  train_common_threads.c  train_common_threads.h
